<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="@dimen/dimen_300dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/quizdroid_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_64dp"
        android:layout_marginLeft="@dimen/dimen_64dp"
        android:layout_marginRight="@dimen/dimen_64dp"
        android:layout_marginStart="@dimen/dimen_64dp"
        android:background="@drawable/custom_button"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/read_instructions"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_64dp"
        android:layout_marginLeft="@dimen/dimen_64dp"
        android:layout_marginRight="@dimen/dimen_64dp"
        android:layout_marginStart="@dimen/dimen_64dp"
        android:background="@drawable/custom_button"
        android:text="@string/start"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/welcome_text"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_32sp"
        app:layout_constraintBottom_toTopOf="@+id/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</android.support.constraint.ConstraintLayout>