<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context="com.example.android.questionnaire.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/determinantProgressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:progressBackgroundTint="@android:color/transparent"
            android:progressTint="@android:color/white"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/questions_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="x/n"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/questions_remaining"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/question_one"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_text"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="64dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/linearLayout_Options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"></LinearLayout>


        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/review_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_layout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_textview"
            android:drawableLeft="@drawable/ic_check_box_outline_blank"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_check_box_outline_blank"
            android:padding="16dp"
            android:text="mark for review"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="32dp"
            android:gravity="center">

            <Button
                android:id="@+id/prev_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:drawableLeft="@drawable/ic_arrow_back"
                android:drawableStart="@drawable/ic_arrow_back"
                android:padding="4dp"
                android:text="@string/prevQuestion"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:drawableEnd="@drawable/ic_arrow_forward"
                android:drawableRight="@drawable/ic_arrow_forward"
                android:padding="4dp"
                android:text="@string/nextQuestion"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>


</ScrollView>